# sim-racing-engineer

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-07-02-iracing-telemetry-design.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/ai/: commands.rs  context.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/ibt/: binary.rs  mod.rs  parser.rs  types.rs
src-tauri/src/session/: manager.rs  mod.rs  watcher.rs
src/components/: AiPanel.tsx  AutoFeedback.tsx  BrakeAnalysis.tsx  ChatThread.tsx  CornerSpeed.tsx  DeltaView.tsx  LapMap.tsx  LapSidebar.tsx  SetupPanel.tsx  SetupView.tsx  SidebarTrackMap.tsx  TitleBar.tsx  TraceChart.tsx  TraceGroup.tsx  TrackMap.tsx  UpdateBanner.tsx
src/lib/: channelGroups.ts  i18n.ts  trackCorners.ts
src/pages/: Settings.tsx  Viewer.tsx
src/store/: ai.ts  session.ts
